# dotex

./: .gitignore  LICENSE  README.md  config_pix2tex.yaml  config_texteller.yaml  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: REVIEW_UI.md
src/docx2xelatex/: __init__.py  audit.py  build_latex.py  cli.py  config.py  formula_filter.py  gpu_diagnostics.py  image_convert.py  latex_clean.py  latex_validate.py  manifest.py  merge_markdown.py  ocr_pipeline.py  pandoc_stage.py  paths.py  report.py  review_server.py  select_candidate.py  subprocess_utils.py  utils.py  visual_compare.py
src/docx2xelatex/engines/: base.py  docx2tex_tex.py  ollama_qwen.py  pix2tex_engine.py  texteller_engine.py
templates/: formula_validate.tex  header.tex  report.html.j2
tests/: test_effective_ocr.py  test_formula_pipeline_reliability.py  test_latex_clean.py  test_latex_preset.py  test_manifest.py  test_merge_invariants.py  test_merge_markdown.py  test_multi_ocr.py  test_ocr_parallel.py  test_ollama_qwen.py  test_subprocess_utils.py
