[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docx2xelatex"
version = "0.1.0"
description = "Local privacy-first DOCX to clean XeLaTeX pipeline with formula OCR lifecycle"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Local Toolsmith" }]
dependencies = [
  "typer>=0.12",
  "PyYAML>=6.0",
  "Jinja2>=3.1",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
visual = ["Pillow>=10"]
pix2tex = [
  "pix2tex>=0.1.4",
]
texteller = [
  "texteller @ git+https://github.com/OleehyO/TexTeller.git",
]
texteller-deps = [
  "optimum[onnxruntime]>=1.24.0",
  "opencv-python-headless>=4.11.0.86",
  "pyclipper>=1.3.0.post6",
  "shapely>=2.1.0",
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "transformers==4.47",
  "wget>=3.2",
  "python-multipart>=0.0.20",
  "ray[serve]>=2.44.1",
]
all = [
  "docx2xelatex[pix2tex]",
  "docx2xelatex[texteller-deps]",
]

[project.scripts]
docx2xelatex = "docx2xelatex.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
docx2xelatex = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
